<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <EditText 
        android:id="@+id/et_classname"
        android:layout_width="250dip"
         android:layout_height="wrap_content"
         android:hint="@string/classname"/>

    <EditText 
        android:id="@+id/et_classroom"
        android:layout_width="250dip"
         android:layout_height="wrap_content"
         android:hint="@string/classroom"/>  

    <EditText 
        android:id="@+id/et_classteacher"
        android:layout_width="250dip"
        android:layout_height="wrap_content"
        android:hint="@string/classteacher"/>  
    
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dip"
        android:hint="@string/startend"/>  
    
    <LinearLayout
          android:orientation="horizontal"
          android:layout_marginLeft="15dip"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content">
          <Button
          android:id="@+id/class_starttime"
          android:layout_width="100dip"
          android:layout_height="wrap_content"
          android:visibility="visible"/>
          <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:hint="-----"/>  
          <Button
          android:id="@+id/class_endtime"
          android:layout_width="100dip"
          android:layout_height="wrap_content"
          android:visibility="visible"/>
      </LinearLayout>
<!--     <EditText 
        android:id="@+id/et_classtime"
        android:layout_width="250dip"
        android:layout_height="wrap_content"
        android:hint="@string/classtime"/> --> 
    <Spinner android:id="@+id/class_week"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"/>
    <Button 
        android:id="@+id/add_ok"
         android:layout_width="80dip"
         android:layout_height="wrap_content"
         android:layout_marginLeft="80dip"
         android:text="@string/ok"/>"

</LinearLayout>